SPARK-2400: Improve parsing of startup arguments.
Now you can specify params like:
--username=juliet --server=capulet.lit --password=secret xmpp:romeo@montague.lit